--- a/modules/6-0-footer/styles.css
+++ b/modules/6-0-footer/styles.css
@@ -1,5 +1,386 @@
 * {
+  margin: 0;
   box-sizing: border-box;
-  /* Temporary - control the layout! */
-  outline: 1px solid red !important;
+  font-family: "Roboto", sans-serif;
+  transition: 1s linear;
+}
+* a {
+  color: white;
+  text-decoration: none;
+}
+
+.btn {
+  width: 298px;
+  height: 54px;
+  background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+  border-radius: 25px;
+  text-align: center;
+  line-height: 54px;
+}
+.btn:hover {
+  background: #E47209;
+}
+.btn:active {
+  background: #4B9200;
+}
+
+footer {
+  position: relative;
+  width: 100%;
+  background-color: #111115;
+  color: white;
+}
+@media (max-width: 450px) {
+  footer {
+    display: none;
+  }
+}
+footer .footer-wrapper {
+  max-width: 1160px;
+  padding: 40px 20px 50px;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
+}
+@media (max-width: 610px) {
+  footer .footer-wrapper {
+    padding: 12px;
+  }
+}
+footer .footer-wrapper .footer-logo-mail-container {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+footer .footer-wrapper .footer-logo-mail-container h2 {
+  position: relative;
+  height: 52px;
+  border: 1px solid white;
+  border-radius: 2px;
+  padding: 3.55px 4.75px;
+  flex: 0 0 82px;
+  line-height: 16px;
+  text-align: center;
+}
+footer .footer-wrapper .footer-logo-mail-container h2 img {
+  position: absolute;
+  left: 6px;
+  top: 22px;
+}
+footer .footer-wrapper .footer-logo-mail-container h2 a {
+  line-height: 23px;
+  font-weight: 400;
+  font-size: 19px;
+}
+@media (max-width: 1000px) {
+  footer .footer-wrapper .footer-logo-mail-container .subscription {
+    margin-right: 45px;
+  }
+}
+@media (max-width: 815px) {
+  footer .footer-wrapper .footer-logo-mail-container .subscription {
+    display: none;
+  }
+}
+footer .footer-wrapper .footer-logo-mail-container .subscription h3 {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 120%;
+  margin-bottom: 14px;
+}
+footer .footer-wrapper .footer-logo-mail-container .subscription input[type=email] {
+  box-sizing: border-box;
+  width: 228px;
+  height: 42px;
+  background-color: transparent;
+  border: 1px solid #F9804B;
+  border-radius: 2px;
+  font-size: 16px;
+  padding: 10px;
+  color: #BDBDBD;
+}
+footer .footer-wrapper .footer-logo-mail-container .subscription input[type=email]:focus {
+  color: #4B9200;
+  border: 1px solid #4B9200;
+}
+footer .footer-wrapper .footer-logo-mail-container .subscription input[type=email]:not(:focus):not(:-moz-placeholder-shown):invalid {
+  color: #D31414;
+  border: 1px solid #D31414;
+}
+footer .footer-wrapper .footer-logo-mail-container .subscription input[type=email]:not(:focus):not(:-ms-input-placeholder):invalid {
+  color: #D31414;
+  border: 1px solid #D31414;
+}
+footer .footer-wrapper .footer-logo-mail-container .subscription input[type=email]:not(:focus):not(:placeholder-shown):invalid {
+  color: #D31414;
+  border: 1px solid #D31414;
+}
+footer .footer-wrapper .footer-logo-mail-container .subscription .sub-btn {
+  box-sizing: border-box;
+  width: 129px;
+  background-color: #F1F3F2;
+  border: 1px solid #333B41;
+  border-radius: 5px;
+  font-weight: 450;
+  font-size: 16px;
+  line-height: 140%;
+  padding: 10px;
+  color: #333B41;
+  margin-left: 6px;
+  cursor: pointer;
+}
+footer .footer-wrapper .donate-button-container {
+  padding: 36px 0px 44px;
+}
+footer .footer-wrapper .donate-button-container .btn {
+  border-radius: 5px;
+}
+footer .footer-wrapper .tablet-social {
+  display: none;
+}
+@media (max-width: 815px) {
+  footer .footer-wrapper .tablet-social {
+    display: flex;
+    flex-flow: column nowrap;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+  }
+  footer .footer-wrapper .tablet-social .single-social svg {
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0px;
+    background-color: rgba(196, 196, 196, 0.5);
+  }
+}
+@media (max-width: 815px) and (max-width: 610px) {
+  footer .footer-wrapper .tablet-social .single-social svg {
+    margin: 20px;
+  }
+}
+@media (max-width: 815px) {
+  footer .footer-wrapper .tablet-social .single-social:hover {
+    color: #4B9200;
+  }
+  footer .footer-wrapper .tablet-social .single-social:hover svg {
+    background-color: #4B9200;
+  }
+}
+footer .footer-wrapper .soc-nav-copy-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+footer .footer-wrapper .soc-nav-copy-container .social {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  flex: 0 0 auto;
+}
+footer .footer-wrapper .soc-nav-copy-container .social .single-social {
+  display: flex;
+  align-items: center;
+}
+footer .footer-wrapper .soc-nav-copy-container .social .single-social svg {
+  width: 26px;
+  height: 26px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 12px;
+  background-color: rgba(196, 196, 196, 0.5);
+}
+footer .footer-wrapper .soc-nav-copy-container .social .single-social:hover {
+  color: #4B9200;
+}
+footer .footer-wrapper .soc-nav-copy-container .social .single-social:hover svg {
+  background-color: #4B9200;
+}
+@media (max-width: 815px) {
+  footer .footer-wrapper .soc-nav-copy-container .social {
+    display: none;
+  }
+}
+footer .footer-wrapper .soc-nav-copy-container nav ul {
+  display: flex;
+  list-style: none;
+  flex: 1 1 auto;
+}
+@media (max-width: 815px) {
+  footer .footer-wrapper .soc-nav-copy-container nav ul {
+    padding-left: 0px;
+  }
+}
+footer .footer-wrapper .soc-nav-copy-container nav ul li {
+  margin: 4px 29px;
+}
+footer .footer-wrapper .soc-nav-copy-container nav ul li:first-of-type {
+  margin-left: 100px;
+}
+@media (max-width: 815px) {
+  footer .footer-wrapper .soc-nav-copy-container nav ul li:first-of-type {
+    margin-left: 0px;
+  }
+}
+footer .footer-wrapper .soc-nav-copy-container nav ul li span {
+  background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+footer .footer-wrapper .soc-nav-copy-container nav ul li:hover {
+  background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+@media (max-width: 1000px) {
+  footer .footer-wrapper .soc-nav-copy-container nav ul li {
+    margin: 4px 20px;
+  }
+}
+footer .footer-wrapper .soc-nav-copy-container .copyright {
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  gap: 10px;
+  line-height: 130%;
+}
+footer .footer-wrapper .soc-nav-copy-container .copyright a {
+  font-weight: 100;
+  color: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+}
+footer .footer-wrapper .soc-nav-copy-container .copyright a:active {
+  color: #4B9200;
+  cursor: pointer;
+}
+@media (max-width: 610px) {
+  footer .footer-wrapper .soc-nav-copy-container .copyright a {
+    display: none;
+  }
+}
+footer .footer-wrapper .soc-nav-copy-container .copyright .tablet-copy {
+  display: none;
+}
+@media (max-width: 610px) {
+  footer .footer-wrapper .soc-nav-copy-container .copyright .tablet-copy {
+    display: block;
+    margin: 0px 30px;
+    transform: scale(2);
+  }
+}
+@media (max-width: 640px) {
+  footer .footer-wrapper h2 {
+    border: none;
+    width: 47px;
+    height: 29px;
+    margin: 0px 0.5% 25px;
+  }
+}
+@media (max-width: 640px) and (max-width: 320px) {
+  footer .footer-wrapper h2 {
+    transform: translateX(-10px);
+  }
+}
+@media (max-width: 640px) {
+  footer .footer-wrapper h2 a {
+    font-size: 12.2899px;
+    line-height: 30%;
+  }
+}
+@media (max-width: 640px) {
+  footer .footer-wrapper h2 img {
+    transform: scale(0.7);
+    left: 20px;
+    bottom: 4px;
+  }
+}
+
+.mobile-fallback-footer {
+  display: none;
+}
+@media (max-width: 450px) {
+  .mobile-fallback-footer {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0px;
+  }
+  .mobile-fallback-footer h2 {
+    position: relative;
+    font-weight: 400;
+    font-size: 19px;
+    line-height: 120%;
+  }
+  .mobile-fallback-footer h2 img {
+    position: absolute;
+    bottom: 6px;
+    right: 45px;
+  }
+  .mobile-fallback-footer .social {
+    display: flex;
+    flex-flow: row nowrap;
+  }
+  .mobile-fallback-footer .social .single-social svg {
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;
+    background-color: rgba(196, 196, 196, 0.5);
+  }
+  .mobile-fallback-footer .social .single-social:hover {
+    color: #4B9200;
+  }
+  .mobile-fallback-footer .social .single-social:hover svg {
+    background-color: #4B9200;
+  }
+  .mobile-fallback-footer .donate-button-container {
+    width: 97%;
+    display: flex;
+    justify-content: center;
+  }
+  .mobile-fallback-footer .donate-button-container .btn {
+    width: 100%;
+    border-radius: 5px;
+  }
+  .mobile-fallback-footer .copyright {
+    margin: 30px 13px;
+    align-self: flex-end;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    gap: 10px;
+    line-height: 130%;
+  }
+  .mobile-fallback-footer .copyright a {
+    font-weight: 100;
+    color: rgba(255, 255, 255, 0.5);
+    cursor: pointer;
+  }
+  .mobile-fallback-footer .copyright a:active {
+    color: #4B9200;
+    cursor: pointer;
+  }
+  .mobile-fallback-footer nav {
+    width: 100%;
+  }
+  .mobile-fallback-footer nav ul {
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+  }
+  .mobile-fallback-footer nav ul li {
+    margin: 10px 10px;
+  }
 }/*# sourceMappingURL=styles.css.map */
